fix websocket app, change socket io client to a new version

--- a/apps/websocket-sample/client/index.html
+++ b/apps/websocket-sample/client/index.html
@@ -2,15 +2,18 @@
 
 <head>
   <title>WebSocket NestJS</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
+  <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
   <script>
     const socket = io('http://localhost:3000');
     setInterval(() => {
       if (socket.connected) {
+        console.log('connected')
         socket.emit('message', { name: 'Test User' }, (data) => {
           document.getElementById('socket-data').innerHTML +=
             '<li>' + data.trim() + '<li/>';
         });
+      } else {
+        console.log('not connected')
       }
     }, 1000);
     setInterval(() => socket.disconnect(), 30 * 1000);
